[package]
name = "surexe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap_derive = "4.5.13"
anyhow = "1.0.89"
nu-ansi-term = "0.49"
serde ={ version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
confy = "0.6.1"
curl = "0.4.46"
termimad = "0.30.0"
dialoguer = "0.11.0"
